--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ certifi==2020.4.5.2
 cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
+coverage==5.1
 cryptography==2.9.2
 decorator==4.4.2
+EasyProcess==0.3
 flake8==3.8.3
 Flask==1.1.2
 flask-oidc==1.4.0
@@ -54,6 +56,7 @@ Pygments==2.6.1
 pylint==2.5.3
 pyparsing==2.4.7
 pytest==5.4.3
+PyVirtualDisplay==1.3.2
 PyYAML==5.3.1
 requests==2.23.0
 rsa==4.6
