--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 appnope==0.1.0
-astroid==2.4.2
+astroid==2.3.3
 attrs==19.3.0
 Authlib==0.14.3
 backcall==0.2.0
@@ -12,6 +12,7 @@ click==7.1.2
 coverage==5.1
 cryptography==2.9.2
 decorator==4.4.2
+dodgy==0.2.1
 EasyProcess==0.3
 flake8==3.8.3
 Flask==1.1.2
@@ -41,28 +42,40 @@ parse==1.15.0
 parse-type==0.5.2
 parso==0.7.0
 pbr==5.4.5
+pep8-naming==0.4.1
 pexpect==4.8.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 pluggy==0.13.1
 prompt-toolkit==3.0.5
+prospector==1.2.0
 ptyprocess==0.6.0
 py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.6.0
+pycodestyle==2.4.0
 pycparser==2.20
-pyflakes==2.2.0
+pydocstyle==5.0.2
+pyflakes==2.1.1
 Pygments==2.6.1
-pylint==2.5.3
+pylama==7.7.1
+pylint==2.4.4
+pylint-celery==0.3
+pylint-django==2.0.12
+pylint-flask==0.6
+pylint-plugin-utils==0.6
 pyparsing==2.4.7
 pytest==5.4.3
 PyVirtualDisplay==1.3.2
 PyYAML==5.3.1
 requests==2.23.0
+requirements-detector==0.7
 rsa==4.6
 selenium==3.141.0
+setoptconf==0.2.0
 six==1.15.0
 smmap==3.0.4
+snowballstemmer==2.0.0
 stevedore==2.0.0
 toml==0.10.1
 traitlets==4.3.3
@@ -71,5 +84,5 @@ typing-extensions==3.7.4.2
 urllib3==1.25.9
 wcwidth==0.2.4
 Werkzeug==1.0.1
-wrapt==1.12.1
+wrapt==1.11.2
 zipp==3.1.0
