--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -4,6 +4,11 @@ version = 1
 name = "python"
 enabled = true
 
+test_patterns = [
+  "tests/**",
+  "test_*.py"
+]
+
   [analyzers.meta]
   runtime_version = "3.x.x"
 
