--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,7 +1,7 @@
 version = 1
 
 test_patterns = [
-    "./tests/**",
+    "./tests/**/*.py",
     "./tests/behaver/features/**/*.py",
     "./tests/*.py"
 ]
