--- a/requirements.txt
+++ b/requirements.txt
@@ -65,8 +65,10 @@ pylint-celery==0.3
 pylint-django==2.0.12
 pylint-flask==0.6
 pylint-plugin-utils==0.6
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pytest==5.4.3
+python-dotenv==0.14.0
 PyVirtualDisplay==1.3.2
 PyYAML==5.3.1
 requests==2.23.0
