--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,113 @@
-appnope==0.1.0
-astroid==2.3.3
-attrs==19.3.0
-Authlib==0.14.3
-autopep8==1.5.4
+appnope==0.1.3
+astroid==2.12.5
+asttokens==2.0.8
+async-generator==1.10
+attrs==22.1.0
+Authlib==1.0.1
+autopep8==1.7.0
 backcall==0.2.0
-bandit==1.6.2
+bandit==1.7.4
 behave==1.2.6
-certifi==2020.4.5.2
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-coverage==5.1
-cryptography==3.2
-decorator==4.4.2
+certifi==2022.6.15
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+coverage==6.4.4
+cryptography==37.0.4
+decorator==5.1.1
+dill==0.3.5.1
 dodgy==0.2.1
-EasyProcess==0.3
-flake8==3.8.3
-Flask==1.1.2
+EasyProcess==1.1
+executing==1.0.0
+flake8==5.0.4
+Flask==2.2.2
 flask-oidc==1.4.0
-gitdb==4.0.5
-GitPython==3.1.3
-httplib2==0.18.1
-idna==2.9
-importlib-metadata==1.6.1
-install==1.3.1
-ipdb==0.13.2
-ipython==7.15.0
+gitdb==4.0.9
+GitPython==3.1.27
+h11==0.13.0
+httplib2==0.20.4
+idna==3.3
+importlib-metadata==4.12.0
+iniconfig==1.1.1
+install==1.3.5
+ipdb==0.13.9
+ipython==8.4.0
 ipython-genutils==0.2.0
-isort==4.3.21
-itsdangerous==1.1.0
-jedi==0.17.0
-Jinja2==2.11.2
-lazy-object-proxy==1.4.3
-MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==8.3.0
-mypy==0.780
+isort==5.10.1
+itsdangerous==2.0.0
+jedi==0.18.1
+Jinja2==3.1.2
+lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+more-itertools==8.14.0
+mypy==0.971
 mypy-extensions==0.4.3
 oauth2client==4.1.3
-packaging==20.4
-parse==1.15.0
-parse-type==0.5.2
-parso==0.7.0
-pbr==5.4.5
+outcome==1.2.0
+packaging==21.3
+parse==1.19.0
+parse-type==0.6.0
+parso==0.8.3
+pbr==5.10.0
 pep8==1.7.1
-pep8-naming==0.4.1
+pep8-naming==0.13.2
 pexpect==4.8.0
 pickleshare==0.7.5
-pluggy==0.13.1
-prompt-toolkit==3.0.5
-prospector==1.2.0
-ptyprocess==0.6.0
-py==1.8.1
+platformdirs==2.5.2
+pluggy==1.0.0
+poetry-semver==0.1.0
+prompt-toolkit==3.0.31
+prospector==0.12.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pycparser==2.20
-pydocstyle==5.0.2
-pyflakes==2.1.1
-Pygments==2.6.1
-pylama==7.7.1
-pylint==2.4.4
+pycodestyle==2.9.1
+pycparser==2.21
+pydocstyle==6.1.1
+pyflakes==2.5.0
+Pygments==2.13.0
+pylama==8.4.1
+pylint==2.15.0
 pylint-celery==0.3
-pylint-django==2.0.12
+pylint-common==0.2.5
+pylint-django==2.5.3
 pylint-flask==0.6
-pylint-plugin-utils==0.6
-pyOpenSSL==19.1.0
-pyparsing==2.4.7
-pytest==5.4.3
-python-dotenv==0.14.0
-PyVirtualDisplay==1.3.2
-PyYAML==5.3.1
-requests==2.23.0
-requirements-detector==0.7
-rsa==4.6
-selenium==3.141.0
-setoptconf==0.2.0
-six==1.15.0
-smmap==3.0.4
-snowballstemmer==2.0.0
-stevedore==2.0.0
-toml==0.10.1
-traitlets==4.3.3
-typed-ast==1.4.1
-typing-extensions==3.7.4.2
-urllib3==1.25.9
-wcwidth==0.2.4
-Werkzeug==1.0.1
-wrapt==1.11.2
-zipp==3.1.0
+pylint-plugin-utils==0.7
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+PySocks==1.7.1
+pytest==7.1.3
+python-dotenv==0.21.0
+PyVirtualDisplay==3.0
+PyYAML==6.0
+requests==2.28.1
+requirements-detector==1.0.3
+rsa==4.9
+selenium==4.4.3
+setoptconf==0.3.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+stack-data==0.5.0
+stevedore==4.0.0
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.4
+traitlets==5.3.0
+trio==0.21.0
+trio-websocket==0.9.2
+typed-ast==1.5.4
+typing_extensions==4.3.0
+urllib3==1.26.12
+wcwidth==0.2.5
+Werkzeug==2.2.2
+wrapt==1.14.1
+wsproto==1.2.0
+zipp==3.8.1
